horizontal scroll fix

--- a/css/home-custom.css
+++ b/css/home-custom.css
@@ -1,3 +1,6 @@
+html.scrollfixhide {
+    overflow-x: hidden !important;
+}
 section.benefit-section {
  /*  background-image: linear-gradient(#CAE0F0, #FEFEFE); */
     padding-top: 2rem;
